# ASIProjekt

./: .gitignore  README.md  data_downloading.ipynb  docker-compose.dev.yml  docker-compose.perf.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt
backend/performance_tests/: locustfile.py  results.md
backend/src/: database.py  main.py
backend/tests/: test_api.py  test_database.py  test_main.py
data_downloader/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
data_downloader/src/: database.py  geocoder.py  main.py  parser.py  scraper.py
data_downloader/tests/: test_database.py  test_geocoder.py  test_scraper.py
database/: init.sql
frontend/: Dockerfile.prod  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
