[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asi-backend"
version = "0.1.0"
description = "Backend API dla aplikacji nieruchomości"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy",
    "requests",
    "beautifulsoup4",
    "pandas"
]

[project.optional-dependencies]
# Zależności instalowane tylko w środowisku deweloperskim/testowym
dev = [
    "pytest",
    "httpx",          
    "pytest-benchmark", # Do prostych testów wydajnościowych w pytest
    "locust"
]